# DLS-semester-project

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  objects.inv
.github/workflows/: aks-deploy.yml  docker-build.yaml  docker-build.yml
api/chat/: index.html
api/chat_message/: index.html
api/demo/: index.html
api/echo/: index.html
api/monitoring/: index.html
api/server/: index.html
api/server_member/: index.html
api/server_message/: index.html
api/ws/: index.html
documentation/: Untitled Diagram.drawio  first-draft-cicd.drawio  first-draft.sysarc.drawio
kube/: Makefile  auth-app-deployment.yaml  auth-app-pod.yaml  auth-app-service.yaml  chat-app-deployment.yaml  chat-app-service.yaml  elasticsearch.yaml  gateway-app-deployment.yaml  gateway-app-service.yaml  ingress.yaml  neo4j-deployment.yaml  neo4j-pod.yaml  neo4j-pvc.yaml  neo4j-service.yaml  notification-app-deployment.yaml  notification-app-pod.yaml  notification-app-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres.yaml  rabbitmq-deployment.yaml  rabbitmq-pod.yaml  rabbitmq-service.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  relation-app-deployment.yaml  relation-app-pod.yaml  relation-app-service.yaml
kube/config/: config.yaml
search/: search_index.json
services/auth_service/: Dockerfile  docker-compose.yaml
services/chat_service/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  temp.py
services/chat_service/chat-docs/: README.md  mkdocs.yml
services/chat_service/chat-docs-db/dbdoc/: README.md  public.chat.md  public.chat_message.md  public.server.md  public.server_member.md  public.server_message.md  schema.json
services/chat_service/chat-docs/docs/: api.md  index.md
services/chat_service/chat-docs/docs/api/: chat.md  chat_message.md  demo.md  echo.md  monitoring.md  server.md  server_member.md  server_message.md  ws.md
services/chat_service/chat-docs/site/: objects.inv
services/chat_service/chat-docs/site/api/: index.html
services/chat_service/chat-docs/site/api/chat/: index.html
services/chat_service/chat-docs/site/api/chat_message/: index.html
services/chat_service/chat-docs/site/api/demo/: index.html
services/chat_service/chat-docs/site/api/echo/: index.html
services/chat_service/chat-docs/site/api/server_member/: index.html
services/chat_service/chat-docs/site/api/ws/: index.html
services/chat_service/chat_service/: __init__.py  __main__.py  conftest.py  exceptions.py  settings.py
services/chat_service/chat_service/core/: base_dao.py  base_schemas.py  pagination_dtos.py
services/chat_service/chat_service/db/: base.py  dependencies.py  models.py  utils.py
services/chat_service/chat_service/services/: __init__.py
services/chat_service/chat_service/services/elasticsearch/: dependencies.py
services/chat_service/chat_service/services/rabbit/: dependencies.py  lifetime.py
services/chat_service/chat_service/services/ws/: ws.py  ws_deps.py
services/chat_service/chat_service/utils/: daos.py  dtos.py  http.py
services/chat_service/chat_service/web/: application.py  lifetime.py
services/chat_service/chat_service/web/api/: __init__.py  router.py
services/chat_service/chat_service/web/api/chat/: __init__.py  dependencies.py  views.py
services/chat_service/chat_service/web/api/chat_message/: __init__.py  views.py
services/chat_service/chat_service/web/api/demo/: __init__.py  views.py
services/chat_service/chat_service/web/api/echo/: __init__.py  schema.py  views.py
services/chat_service/chat_service/web/api/monitoring/: __init__.py  views.py
services/chat_service/chat_service/web/api/rabbit/: __init__.py  schema.py  views.py
services/chat_service/chat_service/web/api/server/: __init__.py  dependencies.py  views.py
services/chat_service/chat_service/web/api/server_member/: __init__.py  views.py
services/chat_service/chat_service/web/api/server_message/: __init__.py  views.py
services/chat_service/chat_service/web/api/ws/: __init__.py  dependencies.py  views.py
services/chat_service/chat_service/web/daos/: chat_dao.py  chat_message_dao.py  server_dao.py  server_member_dao.py  server_message_dao.py
services/chat_service/chat_service/web/dtos/: chat_dtos.py  chat_message_dtos.py  rmq_dtos.py  server_dtos.py  server_member_dtos.py  server_message_dtos.py
services/chat_service/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
services/chat_service/src/: __main__.py  conftest.py
services/chat_service/src/db/: base.py  utils.py
services/chat_service/src/db/models/: __init__.py
services/chat_service/src/services/rabbit/: lifetime.py
services/chat_service/src/tests/: __init__.py
services/chat_service/src/web/: __init__.py  application.py  lifetime.py
services/chat_service/src/web/api/: router.py
services/chat_service/src/web/api/echo/: views.py
services/chat_service/src/web/api/rabbit/: __init__.py  views.py
services/client_service/: index.html
services/gateway/: Dockerfile  dtos.py  main.py  pyproject.toml  settings.py
services/notification_service/: Dockerfile  main.py  pyproject.toml  settings.py
services/notification_service/api/routes/: router.py
services/notification_service/api/routes/notifications/: router.py  ws_connection_manager.py
services/notification_service/db/: redis.py
services/notification_service/rabbitmq/: connection.py
services/relation_service/: .env-example  Cargo.toml  Dockerfile  rustfmt.toml
services/relation_service/src/: lib.rs  main.rs
services/relation_service/src/dao/: mod.rs  relation_dao.rs  user_dao.rs
services/relation_service/src/db/: db.rs
services/relation_service/src/dtos/: mod.rs  relation_dto.rs  response_dto.rs  response_dtos.rs  user_dtos.rs
services/relation_service/src/handlers/: relation.rs  users.rs
services/relation_service/src/rabbitmq/: connection.rs
services/relation_service/tests/: integration_tests.rs
testing/: docker-compose.yaml
testing/locust-tests/: locust_test.py  pyproject.toml
(+47 files in other folders)
