[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notification_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
websockets = "^12.0"
pika = "^1.3.2"
aio-pika = "^9.4.1"
aioredis = "2.0.0"
mypy-extensions = "^1.0.0"
mypy = "^1.9.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
