[package]
name = "relation_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
cargo-watch = "8.5.2"
env_logger = "0.11.3"
neo4rs = "0.7.1"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
utoipa = {version = "4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "6.0.0", features = ["actix-web"]}
uuid = {version = "1.7.0", features = ["serde", "v4"] }
