[package]
name = "relation_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
cargo-watch = "8.5.2"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
env_logger = "0.11.3"
lapin = "2.3.1"
neo4rs = "0.7.1"
reqwest = "0.11.26"
serde = "1.0.197"
serde_json = "1.0.114"
utoipa = {version = "4.2.0", features = ["actix_extras","uuid"]}
utoipa-swagger-ui = {version = "6.0.0", features = ["actix-web"]}
uuid = {version = "1.7.0", features = ["serde", "v4"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "1.0.0"
thiserror = "1.0.30"
futures-lite = "2.2.0"
tracing = "0.1.40"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
chrono = "0.4.35"
dotenv = "0.15.0"
bcrypt = "0.15.1"
